syntax = "proto3";
package logi.auth;

service AuthService {
  // Sign up with Google ID token â€” creates user + organization (user becomes admin)
  rpc SignUpWithGoogle(SignUpWithGoogleRequest) returns (AuthResponse);
  // Login with Google ID token (existing user)
  rpc LoginWithGoogle(LoginWithGoogleRequest) returns (AuthResponse);
  // Login with username/password (invited users)
  rpc Login(LoginRequest) returns (AuthResponse);
  // Validate JWT token
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message SignUpWithGoogleRequest {
  string id_token = 1;
  string organization_name = 2;
  string organization_slug = 3;
}

message LoginWithGoogleRequest {
  string id_token = 1;
}

message LoginRequest {
  string organization_id = 1;
  string username = 2;
  string password = 3;
}

message AuthResponse {
  string token = 1;
  string expires_at = 2;
  string user_id = 3;
  string organization_id = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string organization_id = 2;
  string user_id = 3;
  string username = 4;
}
